--- a/src/pages/detail/styles.module.css
+++ b/src/pages/detail/styles.module.css
@@ -85,8 +85,7 @@
 @media (max-width: 768px) {
     .wrapper {
         padding: 20px;
-        margin-top: 15px;
-        margin-bottom: 15px;
+        margin: 15px;
     }
     
     .wrapper h1 {
