--- a/src/components/footer/styles.module.css
+++ b/src/components/footer/styles.module.css
@@ -1,12 +1,16 @@
 .footer {
-  height: 100px;
+  height: 60px;
   display: flex;
   align-items: center;
   justify-content: center;
   color: var(--text-primary);
   background-color: var(--background);
   border-top: 1px solid rgba(0, 0, 0, 0.1);
-  margin-top: 40px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
 }
 
 [data-theme='dark'] .footer {
