--- a/src/index.css
+++ b/src/index.css
@@ -67,7 +67,8 @@ h1, h2 { margin-top: 0; }
     justify-content: space-between;
     text-decoration: none;
     justify-content: center;
-    align-items: center;
+    align-items: center; 
+    margin-bottom: 25px;
 }
 
 .header-container li {
